examples/negative/parse_errors/L1/reserved_then.ob
MODULE Reserved;

VAR THEN: INTEGER;

END Reserved.
